argument parser and pip package

--- a/foo.1
+++ b/foo.1
@@ -1,110 +1,54 @@
 
 .Dd $Mdocdate: 30.11.2019 $
-.Dt Wikipedia
+.Dt Wikipedia de
 .Os
 .Sh NAME
-.Nm Manpage
-.Nd https://de.wikipedia.org/wiki/Manpage
-.Sh ZUSAMMENFASSUNG
-Manpages (nach dem Unix-Kommando man, was für englisch manual „Handbuch“ steht) sind eine Sammlung von Hilfe- und Dokumentationsseiten unter Unix und verwandten Betriebssystemen. Sie werden mit den Kommandos man und whatis durchsucht sowie ausgegeben. Zur schnellen Durchmusterung wird ein eigener Index, die sogenannte Whatis-Datenbank, angelegt. Manpages werden unter Zuhilfenahme des speziell konzipierten Macro-Pakets man mit dem Unix-Systemwerkzeug troff erzeugt.
+.Nm LOL
+.Nd https://de.wikipedia.org/wiki/LOL
+.Sh Zusammenfassung
+LOL, Akronym für Laughing Out Loud oder auch laugh out loud, (dt. „laut lachen“, wörtlich „laut auflachen“) ist ein Wort aus dem Netzjargon und wird als Reaktion auf etwas Lustiges oder Außergewöhnliches, aber auch für „auslachen“ gebraucht.
 
 
 
-.Sh  Aufbau 
-
-
-=== Gliederung, Sections ===
-Manpages sind in weiten Teilen ausdrücklich nicht durch den POSIX-Standard (IEEE Std 1003.1) standardisiert, sondern die Standardisierung erfolgte lediglich für das absolut notwendige Minimum. Allerdings hat sich eine auf den meisten Unix-Derivaten ähnliche Einteilung in sogenannte Sections (Kapitel, Bereiche) eingebürgert, die sich an die ursprüngliche Einteilung anlehnt.
-Beispielhaft hier die Sektionen unter AIX (Titel in Locale C):
-
-(1) User Commands and Daemons („Anwender-Kommandos und Hintergrunddienste“)
-(2) System Calls and Kernel Services („Systemaufrufe und -dienste“)
-(3) Subroutines („Unterprogramme“)
-(4) Special Files, Device Drivers and Hardware („Geräte“)
-(5) Configuration Files („Konfigurationsdateien“)
-(6) Games („Spiele“)
-(7) Miscellaneous Commands („Verschiedenes“)
-(8) Administrative Commands and Daemons („Verwaltung“)So verweist die Notation jail(8) auf die Handbuchseite des FreeBSD Systemverwaltungs-Kommando jail, wohingegen die Notation jail(2) auf die Handbuchseite des FreeBSD Systemaufrufs jail hindeutet.
-
-
-=== Aufbau einzelner Manpages ===
-Eine ähnlich informelle Konvention wie bei den Kapiteln hat sich auch beim Aufbau der einzelnen Artikel eingebürgert. Stark von dieser Konvention weichen lediglich Systeme ab, die ihre Systemkommandos von der GNU-Initiative beziehen (Linux, FreeBSD etc.), weil das GNU-Projekt versucht, Manpages durch in deren Augen bessere Alternativen (Texinfo) abzulösen. Dennoch existieren Manpages auch für Programme, welche diese Art der Dokumentation nicht mitliefern, da solche für einzelne Linux-Distributionen erstellt worden sind (so schreibt das Debian-Projekt vor, dass alle Programme eine Manpage haben sollten); vielfach sind dies allerdings nur Kurzbeschreibungen, manchmal veraltet, meist nur in englischer Sprache verfügbar, darüber hinaus werden sie nicht bei jedem System mitgeliefert.
-Typischerweise ist eine Manpage in folgende Bereiche unterteilt, eingeklammerte Abschnitte sind optional:
-NAME
-
-Name des Programms gefolgt von einer einzeiligen Kurzbeschreibung.SYNOPSIS
-
-Für Programme wird hier eine vollständige Liste der Parameter und Optionen beschrieben.DESCRIPTION
-
-Eine Textbeschreibung der Funktionsweise des Befehls oder der Funktion. (Üblicherweise jedoch nicht der Benutzung, siehe unten.)OPTIONS / FLAGS
-
-Eine üblicherweise alphabetisch sortierte Liste der Optionen und ihrer zulässigen Argumente.(USAGE)
-
-Eine Anleitung für den Einsatz des Programms.EXIT STATUS
-
-Beschreibung möglicher Rückgabewerte und deren Bedeutung.(EXAMPLES)
-
-Einige Beispiele für die Benutzung.(FILES)
-
-Falls bestimmte Dateien (etwa Konfigurationsdateien) an der Funktion des Programms beteiligt sind oder durch die Ausführung desselben betroffen sind, so werden sie hier aufgeführt und ihre Funktion beschrieben.SEE ALSO
-
-Eine Liste ähnlicher oder verwandter Befehle oder Funktionen, bei betroffenen Dateien wird hier auf die entsprechenden Einträge in Section 5 verwiesen.
+.Sh  Ursprung und Verbreitung 
+LOL wurde als Abkürzung für laughing out loud erstmals in den 1980er Jahren verwendet. Im Usenet verfasste der Benutzer Wayne Pearson eine Nachricht, die das Wort LOL beinhaltete. Die Abkürzung wird häufig in E-Mails, SMS-Nachrichten, Computerspielen und Chats verwendet. Daneben hat es sich auch als Bestandteil der Jugendsprache etabliert. 2011 wurde der Begriff in das Oxford English Dictionary aufgenommen.
 
 
 
-.Sh  Gliederung, Sections 
-Manpages sind in weiten Teilen ausdrücklich nicht durch den POSIX-Standard (IEEE Std 1003.1) standardisiert, sondern die Standardisierung erfolgte lediglich für das absolut notwendige Minimum. Allerdings hat sich eine auf den meisten Unix-Derivaten ähnliche Einteilung in sogenannte Sections (Kapitel, Bereiche) eingebürgert, die sich an die ursprüngliche Einteilung anlehnt.
-Beispielhaft hier die Sektionen unter AIX (Titel in Locale C):
+.Sh  Variationen und Ableitungen 
 
-(1) User Commands and Daemons („Anwender-Kommandos und Hintergrunddienste“)
-(2) System Calls and Kernel Services („Systemaufrufe und -dienste“)
-(3) Subroutines („Unterprogramme“)
-(4) Special Files, Device Drivers and Hardware („Geräte“)
-(5) Configuration Files („Konfigurationsdateien“)
-(6) Games („Spiele“)
-(7) Miscellaneous Commands („Verschiedenes“)
-(8) Administrative Commands and Daemons („Verwaltung“)So verweist die Notation jail(8) auf die Handbuchseite des FreeBSD Systemverwaltungs-Kommando jail, wohingegen die Notation jail(2) auf die Handbuchseite des FreeBSD Systemaufrufs jail hindeutet.
+„LOL“ bietet eine Vielzahl von Variationen.
+
+lolz, lulz, löl, lel (kein direkter Unterschied zu LOL)
+ROFL oder ROTFL (rolling on [the] floor laughing), Ableitung: ROFLCOPTER (eine animierte ASCII-Art Darstellung; erstes Erscheinen vermutlich 2004)
+LMAO (Laughing my ass off) und LMFAO (Laughing my fucking ass off)
+lqtm (Laughing quietly to myself)
+kek hat seinen Ursprung in World of Warcraft. Dort gibt es zwei Fraktionen, die Allianz und die Horde, deren Spieler nicht miteinander kommunizieren können. Öffentliche Aussprüche werden für Spieler der gegnerischen Fraktion in Kauderwelsch umgewandelt. lol wird dabei als kek angezeigt, und umgekehrt. Um einen gegnerischen Spieler mit lol auszulachen, gibt man im Spiel /say kek ein. Mittlerweile wird kek als Alternative zu lol auch außerhalb solcher Situationen verwendet.
 
 
 
-.Sh  Aufbau einzelner Manpages 
-Eine ähnlich informelle Konvention wie bei den Kapiteln hat sich auch beim Aufbau der einzelnen Artikel eingebürgert. Stark von dieser Konvention weichen lediglich Systeme ab, die ihre Systemkommandos von der GNU-Initiative beziehen (Linux, FreeBSD etc.), weil das GNU-Projekt versucht, Manpages durch in deren Augen bessere Alternativen (Texinfo) abzulösen. Dennoch existieren Manpages auch für Programme, welche diese Art der Dokumentation nicht mitliefern, da solche für einzelne Linux-Distributionen erstellt worden sind (so schreibt das Debian-Projekt vor, dass alle Programme eine Manpage haben sollten); vielfach sind dies allerdings nur Kurzbeschreibungen, manchmal veraltet, meist nur in englischer Sprache verfügbar, darüber hinaus werden sie nicht bei jedem System mitgeliefert.
-Typischerweise ist eine Manpage in folgende Bereiche unterteilt, eingeklammerte Abschnitte sind optional:
-NAME
+.Sh  Andere Sprachen 
+In einigen Ländern existieren bedeutungsgleiche Koexistenzen zu dem Wort LOL:
 
-Name des Programms gefolgt von einer einzeiligen Kurzbeschreibung.SYNOPSIS
-
-Für Programme wird hier eine vollständige Liste der Parameter und Optionen beschrieben.DESCRIPTION
-
-Eine Textbeschreibung der Funktionsweise des Befehls oder der Funktion. (Üblicherweise jedoch nicht der Benutzung, siehe unten.)OPTIONS / FLAGS
-
-Eine üblicherweise alphabetisch sortierte Liste der Optionen und ihrer zulässigen Argumente.(USAGE)
-
-Eine Anleitung für den Einsatz des Programms.EXIT STATUS
-
-Beschreibung möglicher Rückgabewerte und deren Bedeutung.(EXAMPLES)
-
-Einige Beispiele für die Benutzung.(FILES)
-
-Falls bestimmte Dateien (etwa Konfigurationsdateien) an der Funktion des Programms beteiligt sind oder durch die Ausführung desselben betroffen sind, so werden sie hier aufgeführt und ihre Funktion beschrieben.SEE ALSO
-
-Eine Liste ähnlicher oder verwandter Befehle oder Funktionen, bei betroffenen Dateien wird hier auf die entsprechenden Einträge in Section 5 verwiesen.
+Im Arabischen existieren zwei Schreibweisen, zum einen die transliterierte Variante لــول oder هـــا, was wie ha ausgesprochen wird.
+Französisch: mdr, aus den Initialen von mort de rire (deutsch „totgelacht“)
+Hebräisch: ההה, dessen Aussprache in etwa „hahaha“ entspricht, also als Lachen gedeutet werden kann.
+Im Japanischen wurde ursprünglich das Kanji für Lachen/Lächeln in Klammern gesetzt – (笑). Da dieses als wara(u) ausgesprochen wird, wird es heute üblicherweise einfach nur mit w abgekürzt.
+Im Koreanischen existieren ebenfalls zwei Schreibweisen, einerseits ᄒᄒᄒ, was wie hehehe ausgesprochen wird, andererseits ᄏᄏᄏ, was wie kekeke ausgesprochen wird.
+Schwedisch: Hier ist die Abkürzung asg für Asgarv (deutsch „starkes Lachen“) gebräuchlich.
+Die Thai-Fassung von LOL ist 555, da die Ziffer 5 als ha ausgesprochen wird.
+In einigen Sprachen mit nicht-lateinischer Schrift werden die Buchstaben oft transliteriert, z. B. russisch лол.
 
 
 
-.Sh  Handhabung 
- 
-Auf Manpages in bestimmten Sektionen wird gewöhnlich in der Form Eintragstitel(N) verwiesen, wobei N die Nummer des jeweiligen Abschnitts ist, etwa syslogd(1) oder syslogd(8). Für die meisten Programme gibt es nur einen Abschnitt. Wird beim Aufruf von man keine Abschnittsnummer angegeben, so wird der erste gefundene Abschnitt angezeigt.
-Die Manpages liegen als Einzeldokumente standardgemäß unter /usr/share/man, und zwar in einer festgelegten Directory-Hierarchie, die Locale (lokalsprachliche Übersetzungen der grundsätzlich in Englisch verfassten Dokumente), Section etc. abbildet. Von den meisten Implementierungen von man wird zwar auch die Environment-Variable MANPATH verstanden, aber deren Verwendung ist durch den POSIX-Standard ausdrücklich nicht gedeckt.Mit dem Kommando apropos, das oft ein Wrapper oder Alias für man -k ist, kann man die Whatis-Datenbank nach Stichwörtern durchsuchen. Als Antwort erhält man eine Liste der gefundenen Einträge samt Section-Nummer, die man einem erneuten Aufruf von man dann als Argument übergeben kann.
+.Sh  Siehe auch 
+Liste von Abkürzungen (Netzjargon)
 
 
 
 .Sh  Weblinks 
-Ken Thompson, Dennis Ritchie: Unix Programmer’s Manual. Lucent Technologies, 3. November 1971, abgerufen am 10. September 2017 (englisch, die erste Ausgabe des Unix Programmer’s Manual vom 3. November 1971 ist hier als Scan, Postscript- und PDF-Dateiformat verfügbar). 
-BSD: man(1) – OpenBSD General Commands Manual
-GNU: man(1) – Debian GNU/Linux Ausführbare Programme oder Shell-Befehle Handbuchseite
-POSIX: man – Open Group Base Specification
-weitere man pages für andere Betriebssysteme wie AIX, HP-UX, IRIX, Minix, …, Xenix
+
+Lol und übelst sind nicht mehr geil, Digga! auf Welt Online
 
 
 
@@ -113,87 +57,53 @@ weitere man pages für andere Betriebssysteme wie AIX, HP-UX, IRIX, Minix, …, 
 .Ed
 .Sh Links
 .It
-.Xr AIX
+.Xr ASCII-Art
 .It
-.Xr Apropos (Unix)
+.Xr Akronym
 .It
-.Xr Berkeley Software Distribution
+.Xr Arabische Sprache
 .It
-.Xr Betriebssystem
-.It
-.Xr Chroot
+.Xr Chat
 .It
 .Xr Computerspiel
 .It
-.Xr Daemon
+.Xr Deutsche Sprache
 .It
-.Xr Debian
+.Xr E-Mail
 .It
-.Xr Dennis Ritchie
+.Xr Französische Sprache
 .It
-.Xr Directory
+.Xr Hebräische Sprache
 .It
-.Xr Englische Sprache
+.Xr Initialen
 .It
-.Xr FreeBSD
+.Xr Japanische Sprache
 .It
-.Xr GNU
+.Xr Jugendsprache
 .It
-.Xr Gerätetreiber
+.Xr Kanji
 .It
-.Xr HP-UX
+.Xr Koreanische Sprache
 .It
-.Xr Handbuch
+.Xr Liste von Abkürzungen (Netzjargon)
 .It
-.Xr Hardware
+.Xr Lol
 .It
-.Xr IRIX
+.Xr Netzjargon
 .It
-.Xr Ken Thompson
+.Xr Oxford English Dictionary
 .It
-.Xr Kernel (Betriebssystem)
+.Xr Russische Sprache
 .It
-.Xr Konfigurationsdatei
+.Xr SMS
 .It
-.Xr Linux-Distribution
+.Xr Schwedische Sprache
 .It
-.Xr Locale
+.Xr Thai-Sprache
 .It
-.Xr Makro
+.Xr Usenet
 .It
-.Xr Man (Unix)
+.Xr Welt Online
 .It
-.Xr Minix (Betriebssystem)
-.It
-.Xr Notation
-.It
-.Xr OpenBSD
-.It
-.Xr Open Group
-.It
-.Xr POSIX
-.It
-.Xr Portable Operating System Interface
-.It
-.Xr Rxvt
-.It
-.Xr Systemaufruf
-.It
-.Xr Texinfo
-.It
-.Xr Troff
-.It
-.Xr Unix
-.It
-.Xr Unix-Kommando
-.It
-.Xr Unix-Kommandos
-.It
-.Xr Whatis (Unix)
-.It
-.Xr Wrapper (Software)
-.It
-.Xr Xenix
-.It
-.Xr Xterm
+.Xr World of Warcraft
 
